[package]
name = "hive-hydra"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
futures = "0.3"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"

[dev-dependencies]
wiremock = "0.5"
tempfile = "3.14"
